--- a/user-frontend/package.json
+++ b/user-frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "react-social-icons": "^6.24.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -23,6 +24,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "react-icons": "^5.5.0",
     "vite": "^6.3.5"
   }
 }
