--- a/user-frontend/package.json
+++ b/user-frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.0",
     "react-social-icons": "^6.24.0",
     "tailwindcss": "^4.1.7"
