--- a/estiloya-backend/src/main/resources/application.properties
+++ b/estiloya-backend/src/main/resources/application.properties
@@ -6,12 +6,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
 app.frontend.url=http://localhost:5173
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=mathias.villena@tecsup.edu.pe
-spring.mail.password=haei bvtn yqsa ywzy
+spring.mail.password=xawg ekqc ekrb wurs
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 twilio.account_sid=AC35c60c5635df71c584efc4a2691d8f7d
