--- a/user-frontend/package.json
+++ b/user-frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/vite": "^4.1.7",
     "bootstrap": "^5.3.6",
     "react": "^19.1.0",
