--- a/usuario-api/pom.xml
+++ b/usuario-api/pom.xml
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
@@ -40,7 +41,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
-    <!-- ▶ añadido ▶ Validación de @NotBlank, @Email… -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
@@ -53,7 +53,14 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!-- JWT -->
+    <!-- PostgreSQL Driver -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
+    <!-- JWT (jjwt) -->
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt-api</artifactId>
@@ -72,7 +79,7 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!-- ▶ añadido ▶ MapStruct -->
+    <!-- MapStruct -->
     <dependency>
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct</artifactId>
@@ -85,37 +92,48 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- ▶ añadido ▶ Envío de correo -->
+    <!-- Mail -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-mail</artifactId>
     </dependency>
 
-    <!-- Para verificar Google ID Tokens -->
-  <dependency>
-   <groupId>com.google.api-client</groupId>
-   <artifactId>google-api-client</artifactId>
-   <version>2.2.0</version>
-  </dependency>
-  <dependency>
-   <groupId>com.google.oauth-client</groupId>
-   <artifactId>google-oauth-client-jetty</artifactId>
-   <version>1.34.1</version>
-  </dependency>
-  <dependency>
-   <groupId>com.google.http-client</groupId>
-   <artifactId>google-http-client-jackson2</artifactId>
-   <version>1.41.3</version>
-  </dependency>
+    <!-- Google OAuth token verification -->
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.oauth-client</groupId>
+      <artifactId>google-oauth-client-jetty</artifactId>
+      <version>1.34.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.http-client</groupId>
+      <artifactId>google-http-client-jackson2</artifactId>
+      <version>1.41.3</version>
+    </dependency>
 
-
-
-
-    <!-- ▶ añadido ▶ Twilio SMS (opcional) -->
+    <!-- Twilio SMS -->
     <dependency>
       <groupId>com.twilio.sdk</groupId>
       <artifactId>twilio</artifactId>
       <version>8.31.1</version>
+    </dependency>
+
+    <!-- Stripe -->
+    <dependency>
+      <groupId>com.stripe</groupId>
+      <artifactId>stripe-java</artifactId>
+      <version>24.9.0</version>
+    </dependency>
+
+    <!-- H2 Database for tests -->
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <!-- Tests -->
@@ -129,12 +147,6 @@
       <artifactId>spring-security-test</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency>
-  <groupId>com.stripe</groupId>
-  <artifactId>stripe-java</artifactId>
-  <version>24.9.0</version>
-</dependency>
-
   </dependencies>
 
   <build>
@@ -165,7 +177,19 @@
           </compilerArgs>
         </configuration>
       </plugin>
+
+      <!-- Surefire: activa el perfil "test" para los tests -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.5.3</version>
+        <configuration>
+          <systemPropertyVariables>
+            <spring.profiles.active>test</spring.profiles.active>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
-</project>
 
+</project>
