Despliegue - API- User

--- a/usuario-api/src/main/resources/application-local.properties
+++ b/usuario-api/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 # --------------------
-#  DATOS DE CONEXIÓN
+#  DATOS DE CONEXI\u00D3N
 # --------------------
 spring.datasource.url=jdbc:mysql://localhost:3306/estiloya_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
@@ -21,7 +21,7 @@ app.jwtSecret=1I4EVeEn9F3KD7OifvfaeOV3s37p6Q2luE3wG8URTCA=
 app.jwtExpirationMs=3600000
 
 # --------------------
-#  MAIL (recuperar contraseña, notificaciones…)
+#  MAIL (recuperar contrase\u00F1a, notificaciones\u2026)
 # --------------------
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -31,8 +31,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # --- GOOGLE LOGIN ---
-#app.googleClientId=111391433368-v47kf1iivrmamvmi1fhmdltg3klobpn8.apps.googleusercontent.com
-#app.frontend.url=http://localhost:5173
+app.googleClientId=111391433368-v47kf1iivrmamvmi1fhmdltg3klobpn8.apps.googleusercontent.com
+app.frontend.url=http://localhost:5173
 
 # --------------------
 #  TWILIO (si usas SMS 2FA)
