--- a/usuario-api/.gitignore
+++ b/usuario-api/.gitignore
@@ -1,8 +1,8 @@
 HELP.md
-target/
+#arget/
 .mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+#**/src/main/**/target/
+#**/src/test/**/target/
 # Ignorar configuración local
 src/main/resources/application.properties
 
